2010-03-16 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m75-1:
	- new snapshot

2010-02-03 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m71-1:
	- new snapshot

2010-01-25 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m70-1:
	- new snapshot
	- create tarball in its own function

2010-01-22 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m69-2:
	- rebuild for redland/libjpeg8/libpng1.4/xulrunner1.9.2

2010-01-14 Andreas Radke <andyrtr at archlinux.org>

        * 3.3_dev300_m69-1:
        - new snapshot
	- gtk2 is a needed runtime dep, #17728

2010-01-01 Andreas Radke <andyrtr at archlinux.org>

        * 3.2_dev300_m68-1:
        - new snapshot
	- build with internal lucene

2009-12-18 Andreas Radke <andyrtr at archlinux.org>

        * 3.2_dev300_m67-1:
        - new snapshot
	- build against system boost again

2009-12-03 Andreas Radke <andyrtr at archlinux.org>

        * 3.2_dev300_m66-1:
        - new snapshot

2009-11-19 Andreas Radke <andyrtr at archlinux.org>

        * 3.2_dev300_m65-1:
        - new snapshot
	- add KDE4 support to the profile file + install msg

2009-10-28 Andreas Radke <andyrtr at archlinux.org>

        * 3.2_dev300_m63-1:
        - new snapshot

2009-10-25 Andreas Radke <andyrtr at archlinux.org>

        * 3.2_dev300_m62-1:
	- new snapshot
	- use mercurial for checkouts
	- readd missing lucene dependency
	- make it provide openoffice-en-US
	- modify pkgdesc for devel branch
	- install all built extensions
	# sun-report-builder.oxt and
	# wiki-publisher.oxt installation is still broken

2009-10-08 Andreas Radke <andyrtr at archlinux.org>

        * 3.2_dev300_m61-1:
	- new snapshot
	- use system lucene again
	- drop shell.patch that went upstream

2009-09-28 Andreas Radke <andyrtr at archlinux.org>

        * 3.2_dev300_m60-1:
	- new snapshot
	- built against new db48
	- drop gcc43 buildfix
	- drop npapi buildfix for new xulrunner
	- enable report builder extension	