@@ -6,7 +6,7 @@ pkgbase="openoffice-base-devel"
 pkgname=('openoffice-base-devel' 'openoffice-sdk-devel')
 _OO_milestone=DEV300_m75
 pkgver=3.3_${_OO_milestone/DEV/dev}
-pkgrel=1
+pkgrel=2
 arch=('i686' 'x86_64')
 license=('LGPL3')
 url="http://www.openoffice.org"
@@ -15,9 +15,9 @@ makedepends=(# the real makedeps
              'pam' 'sane' 'zip' 'perl-archive-zip' 'pkgconfig' 'unzip' "xulrunner>=1.9.2-2" 
              'apache-ant>=1.7.1-3' 'cairo' 'gperf' 'libcups' 'poppler' 'kdelibs' 'pstoedit' 'gconf' "openjdk6>=1.6.2"
 	     # from main OOo the deps
-	     "curl>=7.19.7" "hunspell>=1.2.8" "python>=2.6.4" 'libwpd' 'redland>=1.0.10-2' 'libxaw' "neon>=0.28.6"
+	     "curl>=7.19.7" "hunspell>=1.2.8" "python>=2.6.4" 'libwpd' 'libxaw' "neon>=0.28.6"
              'dbus-glib' "icu>=4.2.1" 'hsqldb-java' 'libxslt' 'hicolor-icon-theme' 'desktop-file-utils'
-	     'beanshell' 'saxon' 'vigra' 'libgraphite' 'hyphen' 'lpsolve' 'libmspack' 'libldap' 'boost>=1.41.0' 'lucene')
+	     'beanshell' 'saxon' 'vigra' 'libgraphite' 'hyphen' 'lpsolve' 'libmspack' 'libldap' 'boost>=1.41.0' 'lucene') #'redland>=1.0.10-2'
 	     # libmythes
 source=(${pkgname}-${_OO_milestone}.tar.gz
 	http://tools.openoffice.org/unowinreg_prebuild/680/unowinreg.dll
@@ -140,7 +140,6 @@ build() {
 	--with-system-mozilla=libxul\
 	--with-system-xrender-headers\
 	--with-system-headers\
-	--with-system-redland\
 	--with-alloc=system\
 	--with-jdk-home=${JAVA_HOME}\
 	--with-saxon-jar=/usr/share/java/saxon/saxon9he.jar\
@@ -148,6 +147,14 @@ build() {
 	--with-lucene-analyzers-jar=/usr/share/java/lucene-analyzers.jar\
 	--with-use-shell=bash\
 	 $EXTRAOPTS || return 1
+
+# causes various issues, see http://qa.openoffice.org/issues/show_bug.cgi?id=90956
+#http://bugs.archlinux.org/task/18357
+#http://bugs.archlinux.org/task/18133
+#http://bugs.archlinux.org/task/18461
+#http://bugs.archlinux.org/task/18777
+#	--with-system-redland\  
+
 
 #	--without-system-lucene\
 #	--enable-layout\ /bin/bash: tralay: command not found ???
