@@ -1,3 +1,8 @@
+2010-03-21 Andreas Radke <andyrtr at archlinux.org>
+
+        * 3.3_dev300_m75-2:
+	use internal redland/rasqal/raptor
+
 2010-03-16 Andreas Radke <andyrtr at archlinux.org>
 
         * 3.3_dev300_m75-1:
